Resolves: tdf#120238 remove wrong assert()

There may be a non-empty RowMap even if
nColCount == 0 || nRowCount == 0
if there was only one column or row (or cell) selected and
bRowHeaders and/or bColHeaders were set, thus nColCount and/or
nRowCount were decremented by 1.

Regression from

commit b1f9aa5f58ea322097998839e00d95fc40be8b22
CommitDate: Fri Sep 28 09:04:07 2018 +0200

    loplugin:useuniqueptr in ScChartPositionMap

Change-Id: I942e3fcc92449da57d708f654000387f862a4066